updated app version 3.1

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang='en'>
 <head>
-  <title>Weatherator v3</title>
+  <title>Weatherator v3.1</title>
   <meta charset='utf-8'>  
   <link href='https://fonts.googleapis.com/css?family=Hepta+Slab&display=swap' rel='stylesheet'>
   <link rel='stylesheet' type='text/css' href='./css/style.css' />
@@ -11,7 +11,8 @@
   <script src="./js/script.js"></script>
 </head>
 <body> 
-    <h1>Weatherator v3.0</h1>
+<section id="pageWrapper">
+    <h1>Weatherator v3.1</h1>
     <div id='errorHolder' class='hidden'></div>
 
     <section class='wrapper'>
@@ -39,7 +40,7 @@
             <div id="digitalClock" class="hidden"></div>
         </div>
     </section>
-    <section>
+    <section id="bannerPic">
         <div class="banner" id="bannerHolder"></div>
     </section>
     <section class='wrapper'>
@@ -47,6 +48,6 @@
             <div class="wxCenter" id='centerWxHolder'></div>
             <div class="wxRight" id='rightWxHolder'></div>
     </section>
-
+</section>
 </body>
 </html>
