Style updates -- + bug fix

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <div class="wxCenter" id='centerWxHolder'></div>
             <div class="wxRight" id='rightWxHolder'></div>
     </section>
+    <footer>&copy; Tucker Kent 2020 -- Got Q? <a href="mailto:tbkent1@mail.mccneb.edu">Email Me</a></footer>
 </section>
 </body>
 </html>
